noti overflow fix

--- a/css/components/button.css
+++ b/css/components/button.css
@@ -109,7 +109,7 @@
 
 .btn--close {
     width: var(--h-default);
-    background: url(../../assets/img/Sprites.64af8f61.svg) no-repeat -139px -139px;
+    background: url(../../assets/img/Sprites.64af8f61.svg) no-repeat -137px -139px;
 } 
 
 
